<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- Back Button -->

    <!-- Profile Picture Container -->

    <TextView
        android:id="@+id/faq"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/card_background8"
        android:text="  FAQ"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/faq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:scaleType="centerCrop"
            android:src="@drawable/doctor" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_edit_24"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp" />
    </FrameLayout>

    <!-- Form Container -->

    <TextView
        android:id="@+id/name"
        android:layout_width="367dp"
        android:layout_height="52dp"
        android:layout_marginBottom="520dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="12dp"
        android:textSize="25sp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginBottom="592dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Icon -->
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_person_24" />

        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Username"
            android:textColor="#000000"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginBottom="448dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Icon -->
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_lock_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="17sp" />

        <!-- Label -->
    </LinearLayout>

    <TextView
        android:id="@+id/pwd"
        android:layout_width="369dp"
        android:layout_height="51dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="12dp"
        android:textSize="25sp"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginBottom="316dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Icon -->
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_email_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="17sp" />

        <!-- Label -->
    </LinearLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="369dp"
        android:layout_height="51dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="12dp"
        android:textSize="25sp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="628dp"
        android:backgroundTint="@color/black"
        android:text="LOGOUT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.295" />


</androidx.constraintlayout.widget.ConstraintLayout>